--- a/Project 1/assets/css/main.css
+++ b/Project 1/assets/css/main.css
@@ -76,29 +76,30 @@ h2 {
     flex-wrap: wrap;
 }
 
-.hero {
-    position: relative;
+.hero-grid {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    max-width: 1250px;
+    max-height: 550px;
 }
 
 .hero-image {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
+    grid-column: 1 / 3;
+    grid-row-start: 1;
+    max-width: inherit;
+    max-height: inherit;
+} 
 
 .hero-text {
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    width: 28%;
+    grid-column: 2 / 3;
+    grid-row-start: 1;
     background-color: black;
     background-color: rgba(0, 0, 0, 0.8);
     color: white;
     padding: 0.5em;
     font-weight: 100;
-    display: none;
-}
+    display: none; 
+} 
 
 .featured-work {
     margin-top: 20px;
