HTML errors fixed

--- a/Project 1/assets/css/main.css
+++ b/Project 1/assets/css/main.css
@@ -76,7 +76,7 @@ h2 {
     flex-wrap: wrap;
 }
 
-.hero-grid {
+.hero {
     display: grid;
     grid-template-columns: 70% 30%;
     max-width: 1250px;
